fix: make ExtendedAE registry handler Java 8 compatible